--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </div>
 
-    <script src="index.js"></script>
+    <script src="weatherAPI/index.js"></script>
 </body>
 </html>
 
